ISPN-15348 Use List.of, Set.of, Map.of where possible